--- a/template/about.html
+++ b/template/about.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <p class="btn"><button onclick="window.location.href='{% url 'home' %}'">back</button></p>
+        <p class="btn"><button onclick="window.location.href='{% url 'home' %}'">&lt; back</button></p>
     </header>
     <section>
         <h2>What is Diabetes?</h2>
